@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2014, 2014 IBM Corp. and others
+ * Copyright (c) 2014, 2020 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -144,7 +144,7 @@ public class MemoryInfoStream extends Stream {
 				props.setProperty(EXECUTABLE, FALSE);
 			}
 			
-			memoryInfo.put(new Long(baseAddress), props);
+			memoryInfo.put(Long.valueOf(baseAddress), props);
 		}
 		
 		/* Merge the extra properties into the memory info. */
